[gd_scene load_steps=6 format=3 uid="uid://bbyviry88e5al"]

[ext_resource type="Script" uid="uid://cagnc8jvs5i15" path="res://scripts/GUI/pause_menu.gd" id="1_0jkog"]
[ext_resource type="PackedScene" uid="uid://cao37hxh4xtg4" path="res://GUI/options_menu.tscn" id="2_0u1a6"]
[ext_resource type="Theme" uid="uid://bc4lxh4qi7kdh" path="res://GUI/Themes/menu_theme.tres" id="2_joq13"]
[ext_resource type="PackedScene" uid="uid://ch8ru15x6pp0t" path="res://GUI/audio_menu.tscn" id="3_joq13"]
[ext_resource type="PackedScene" uid="uid://c1axpsl7yml05" path="res://GUI/controls_menu.tscn" id="4_joq13"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_0jkog")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.0
offset_right = -0.15209961
theme = ExtResource("2_joq13")

[node name="Resume Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 502.0
offset_top = 188.0
offset_right = -530.0
offset_bottom = -429.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume Game"

[node name="Options Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 528.0
offset_top = 240.0
offset_right = -554.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="Quit Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 544.0
offset_top = 290.0
offset_right = -566.0
offset_bottom = -327.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="OptionsPanel" parent="Control" instance=ExtResource("2_0u1a6")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ControlsMenu" parent="Control/OptionsPanel" instance=ExtResource("4_joq13")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="AudioPanel" parent="Control/OptionsPanel" instance=ExtResource("3_joq13")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="_audio_button_pressed" from="Control/OptionsPanel" to="." method="_on_options_panel__audio_button_pressed"]
[connection signal="_controls_button_pressed" from="Control/OptionsPanel" to="." method="_on_options_panel__controls_button_pressed"]
